# sold

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  kfe-refresh.yml  report.yml
datasets/: .gitkeep  ground_truth.csv  house_sales.csv  kfe.csv  report.md  unit_prices.csv
docs/: DEVELOPMENT_HISTORY.md
samples/: example_listing.html
samples/labels/: illustrative_kap.json
samples/site/day1/: list.html  listing-1.html  listing-2.html  listing-3.html
scripts/: auto_pull.ps1  build_report.py  fetch_kfe.py  inspect_udf_structure.py
src/sold/: __init__.py  cli.py  config.py
src/sold/api/: __init__.py  (+3 more)
tests/: test_aggregates.py  test_analysis.py  test_api.py  test_consumer.py  test_crawler.py  test_db.py  test_demand.py  test_evds.py  test_flywheel.py  test_groundtruth.py  test_house_sales.py  test_labels.py  test_model.py  test_pipeline.py  test_real_records.py  test_structural.py  test_unit_prices.py  test_uyap_bulk.py  test_uyap_ingestion.py  test_uyap_live_fix.py  test_uyap_live_fix10.py  test_uyap_live_fix11.py  test_uyap_live_fix12.py  test_uyap_live_fix13.py  test_uyap_live_fix14.py  test_uyap_live_fix2.py  test_uyap_live_fix3.py  test_uyap_live_fix4.py  test_uyap_live_fix5.py  test_uyap_live_fix6.py  test_uyap_live_fix6_1.py  test_uyap_live_fix7.py  test_uyap_live_fix8.py  test_uyap_live_fix9.py  test_uyap_pilot.py  test_valuation.py
validation/real_records/: kap.json  toki.json  uyap.json
validation/structural/: identify_snapshot.json  kap.json  kap_candidates.json  toki.json  uyap.json  uyap_candidates.json
(+87 files in other folders)
